<resources>
    <string name="app_name" translatable="false">NextMonday</string>
    <string name="SignEmail">Почта</string>
    <string name="SignPassword">Пароль</string>
    <string name="DontHaveAcc">Не имеете аккаунта?</string>
    <string name="ForgotPass">Забыли пароль?</string>
    <string name="OrContinue">Продолжить с</string>
    <string name="SignIn">Войти</string>
    <string name="Register">Создать новый аккаунт</string>
    <string name="haveAcc">Уже имеете аккаунт?</string>
    <string name="name">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="phone">Номер телефона</string>
    <string name="facebook_app_id">1086653145137007</string>
    <string name="fb_login_protocol_scheme">fb1086653145137007</string>
    <string name="facebook_client_token">56789</string>
    <string name="title_activity_main_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Отсутствует подключение к сети</string>
    <string name="nav_header_subtitle">Отсутствует подключение к сети</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="reset_password">Сброс пароля</string>
    <string name="enter_verification_code">Введите код подтверждения</string>
    <string name="send_code_again">Отправить код Снова</string>
    <string name="exit">Выход</string>
    <string name="Postanovschik">Постановщик целей</string>
    <string name="Calculator">Здоровье</string>
    <string name="Water">Water Reminder</string>
    <string name="Ration">Рацион</string>
    <string name="CorporationAcc">Корпоративный аккаунт</string>
    <string name="PROVersion">Подписка на PRO версию</string>
    <string name="Share">Поделится приложением</string>
    <string name="Connection">Обратная связь</string>
    <string name="confirm_new_password">Подтвердите новый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_the_password">Повторите пароль</string>
    <string name="confirm">Подтвердить</string>
    <string name="Start_changes_now">Начать изменения сейчас</string>
    <string name="Sign_Up">Зарегистрироваться</string>
    <string name="Sign_In">Войти</string>
    <string name="dairy">Ежедневник</string>
    <string name="pn">Пн</string>
    <string name="vt">Вт</string>
    <string name="sr">Ср</string>
    <string name="cht">Чт</string>
    <string name="pt">Пт</string>
    <string name="sb">Сб</string>
    <string name="nd">Нд</string>
    <string name="list">Список дел</string>
    <string name="next_monday">Next Monday</string>
    <string name="enter_time">Установить время</string>
    <string name="repeat">Повторять</string>
    <string name="prototype">Доделать прототип</string>
    <string name="clock">08:00</string>
    <string name="calendar">Календарь</string>
    <string name="to_do_list">Список задач</string>
    <string name="search">Поиск</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="everyday">Каждый день</string>
    <string name="custom_day">Выбрать дни</string>
    <string name="ok">OK</string>
    <string name="Monday">Пн</string>
    <string name="Tuesday">Вт</string>
    <string name="Wednesday">Ср</string>
    <string name="Thursday">Чт</string>
    <string name="Friday">Пт</string>
    <string name="Satuday">Сб</string>
    <string name="Sunday">Нд</string>
    <string name="reset_pass">Восстановление пароля</string>
    <string name="lette_post">Вам на почту будет отправленно письмо с ссылкой
для восстановления </string>
    <string name="create_event">Создать событие</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="change">Изменить</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_email">Ваша ел.почта</string>
    <string name="text_error">Текст сообщения</string>
    <string name="send">Отправить</string>
    <string-array name="spinner_target">
        <item>Сбросить вес</item>
        <item>Сохранить вес</item>
        <item>Набрать вес</item>
    </string-array>
    <string-array name="spinner_activity">
        <item>Нет физической нагрузки</item>
        <item>Сидячая работа без физических нагрузок</item>
        <item>Небольшие пробежки или гимнастика 1–3 раза в неделю</item>
        <item>Занятия спортом 3–5 раз в неделю со средними нагрузками</item>
        <item>Полноценные тренировки 4–7 раз в неделю</item>
        <item>Физическая работа и полноценные тренировки</item>
    </string-array>
    <string name="change_pass">Изменить пароль</string>
    <string name="add">Добавить</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="time">Время:</string>
    <string name="Estimate1">Оценить приложение</string>
    <string name="age">Возраст</string>
    <string name="weight_now">Текущий вес</string>
    <string name="dream_weight">Желаемый вес</string>
    <string name="height">Рост (в см)</string>
    <string name="sex">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="your_target">Ваша цель</string>
    <string name="weight_plus">Набор веса</string>
    <string name="weight_stab">Удержание веса</string>
    <string name="weight_def">Сброс веса</string>
    <string name="F_harryson_benedict">Формула Харрисона-Бенедикта</string>
    <string name="F_mifflin_san_geor">Формула Миффлина - Сан-Жеора</string>
    <string name="rozrahunok">Рассчитать</string>
    <string name="Sum">Итого:</string>
    <string name="check_F">Формула подсчета калорий</string>
    <string name="kkal">Ккал</string>
    <string name="fat">Жиры</string>
    <string name="Carbs">Углеводы</string>
    <string name="Protein">Белки</string>
    <string name="water">Вода</string>
    <string name="alert">Введите полное название продукта иначе он не будет доступен в общей базе даных</string>
    <string name="name_product_hint">Название</string>
    <string name="portion_hint">Размер порции(гр)</string>
    <string name="calor_hint">Количество калорий</string>
    <string name="amount_protein_hint">Количество Белка(гр)</string>
    <string name="whey_protein_hint">Сывороточный протеин(гр)</string>
    <string name="soy_protein_hint">Соевый протеин(гр)</string>
    <string name="egg_protein_hint">Яичный протеин(гр)</string>
    <string name="casein_protein_hint">Казеиновый протеин(гр)</string>
    <string name="amount_carbs_hint">Количество Углеводов(гр)</string>
    <string name="simple_hint">Простые(быстрые)(гр)</string>
    <string name="complicated_carbs_hint">Сложные(медленные)(гр)</string>
    <string name="Fat">Жиры</string>
    <string name="amount_fat_hint">Количество Жиров(гр)</string>
    <string name="saturated_fatty_acids_hint">Насыщенные жирные кислоты(гр)</string>
    <string name="trans_fats_hint">Трансжиры(гр)</string>
    <string name="omega9_hint">Жирные кислоты(Омега-9)(мг)</string>
    <string name="omega6_hint">Жирные кислоты(Омега-6)(мг)</string>
    <string name="omega3_hint">Жирные кислоты (Омега-3)(мг)</string>
    <string name="ala_hint">Альфа-линоленовая кислота(ALA)(мг)</string>
    <string name="dha_hint">Докозагексаеновая кислота(DHA)(мг)</string>
    <string name="epa_hint">Эйкозапентаеновая кислота(EPA)(мг)</string>
    <string name="extra">Дополнительно</string>
    <string name="cellulose_hint">Клетчатка(гр)</string>
    <string name="water_hint">Вода(мл)</string>
    <string name="salt_hint">Соль(гр)</string>
    <string name="ca_hint">Ca(мг)</string>
    <string name="k_hint">K(мг)</string>
    <string name="save_changes_button">Сохранить изменения</string>
    <string name="protein_">Білки:</string>
    <string name="carbs_">Вуглеводи:</string>
    <string name="fat_">Жири :</string>
    <string name="gram_1">1 грамм</string>
    <string name="portion">Порция</string>
    <string name="energ_price">Энергетическая ценность    </string>
    <string name="edit_hint">Редактировать</string>
    <string name="add_eating">Добавить прием</string>
    <string name="my_food">Моя еда</string>
    <string name="find_by_name">Поиск по названию</string>
    <string name="search_by_barcode">Поиск по штрих-коду</string>
    <string name="story">История</string>
    <string name="favorites">Избранное</string>
    <string name="add_food">Добавить еду</string>
    <string name="general">Общие</string>
    <string name="profile">Профиль</string>
    <string name="calculator">Калькулятор</string>
    <string name="moderator">Модератор</string>
    <string name="your_weigth">Текущий вес</string>
    <string name="heigth">Рост</string>
    <string name="desired_weigth">Желаемый вес</string>
    <string name="choose_gender">Выберите ваш пол</string>
    <string name="your_aim">Ваша цель</string>
    <string name="choose_activity">Выберите активность</string>
    <string name="auto_tuning">Автонастройка</string>
    <string name="manual_setting">Ручная настройка</string>
    <string name="add_meal">Добавить прием пищи</string>
    <string name="change_weight">Изменить вес</string>
    <string name="action_settings2">Setting</string>
    <string name="reset_password2">Reset password</string>
    <string name="send_code_again2">Send code again</string>
    <string name="exit2">Exit</string>
    <string name="Postanovschik2">Goals provider</string>
    <string name="Calculator2">Heath</string>
    <string name="Water2">Water Reminder</string>
    <string name="Ration2">Ration</string>
    <string name="CorporationAcc2">Corporate account</string>
    <string name="PROVersion2">PRO version subscription</string>
    <string name="Share2">Share the app</string>
    <string name="Connection2">Feedback</string>
    <string name="confirm2">Confirm</string>
    <string name="dairy2">Dairy</string>
    <string name="changePass">Change password</string>
    <string name="save2">Save</string>
    <string name="plus2">Add task</string>
    <string name="list2">List</string>
    <string name="calendar2">Calendar</string>
    <string name="selectTime">Select time</string>
    <string name="repeat2">Repeat</string>
    <string name="textMassage">Text massage</string>
    <string name="send2">Send</string>
    <string name="checkTarget">Check target</string>
    <string name="everyDay">Every day</string>
    <string name="selectDay">Select Day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="find">Find</string>
    <string name="Estimate">Estimate</string>
    <string name="SignEmail2">Email</string>
    <string name="ForgotPass2">Forgot password?</string>
    <string name="SignIn2">Sing in</string>
    <string name="Register2">Create new account</string>
    <string name="haveAcc2">Do you have account?</string>
    <string name="name2">Name</string>
    <string name="google">Sign in with google</string>
    <string name="facebook">Sign in with facebook</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="descr_general_settings">General settings</string>
    <string name="descr_profile_settings">Profile settings</string>
    <string name="descr_diary_settings">Diary settings</string>
    <string name="descr_calculator_settings">Calculator settings</string>
    <string name="agree">Соглашаюсь</string>
    <string name="with_pr_pol">с политикой конфиденциальности</string>
</resources>