<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_diary"
            android:contentDescription="@string/dairy2"
            android:icon="@drawable/icon_tagret_two"
            android:title="@string/dairy" />

        <item

            android:id="@+id/nav_target"
            android:contentDescription="@string/Postanovschik2"
            android:enabled="false"
            android:icon="@drawable/icon_tagret"
            android:title="@string/Postanovschik" />

        <item
            android:id="@+id/calculator_item"
            android:contentDescription="@string/Calculator2"
            android:icon="@drawable/icon_calculate"
            android:onClick="onMenuItemClick"
            android:title="@string/Calculator" />

        <item
            android:id="@+id/CorporationAcc"
            android:contentDescription="@string/CorporationAcc2"
            android:enabled="false"
            android:icon="@drawable/icon_corp_one"
            android:title="@string/CorporationAcc" />
    </group>
    <group android:checkableBehavior="none">
        <item android:title="Дополнительно">

            <menu>

                <item
                    android:id="@+id/PROVersion"
                    android:contentDescription="@string/PROVersion2"
                    android:enabled="false"
                    android:icon="@drawable/icon_pro_first"
                    android:title="@string/PROVersion" />

                <item
                    android:id="@+id/feedback_item"
                    android:contentDescription="@string/Connection2"
                    android:icon="@drawable/icon_feedback"
                    android:onClick="additionalMenuDrawer"
                    app:showAsAction="ifRoom"
                    android:title="@string/Connection" />

                <item
                    android:id="@+id/share_item"
                    android:contentDescription="@string/Share2"
                    android:icon="@drawable/icon_share"
                    android:onClick="onMenuItemClick"
                    android:title="@string/Share" />

                <item
                    android:id="@+id/rating_item"
                    android:contentDescription="@string/Estimate"
                    android:icon="@drawable/ic_star"
                    android:onClick="onMenuItemClick"
                    android:title="@string/Estimate1" />

                <item
                    android:id="@+id/exit_item"
                    android:contentDescription="@string/exit2"
                    android:icon="@drawable/exit_icon"
                    android:onClick="onMenuItemClick"
                    android:title="@string/exit" />
            </menu>
        </item>
    </group>


</menu>