<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calculator_auto_edittext">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/calculator_auto_edittext"
        android:gravity="center|top"
        android:orientation="vertical">

        <Button
            android:visibility="gone"
            android:contentDescription="@string/descr_general_settings"
            android:layout_margin="15dp"
            android:id="@+id/general"
            style="@style/button_setting_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/general" />

        <Button
            android:contentDescription="@string/descr_profile_settings"
            android:layout_margin="15dp"
            android:id="@+id/profile_xml"
            style="@style/button_setting_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/profile" />


        <Button
            android:visibility="gone"
            android:contentDescription="@string/descr_diary_settings"
            android:layout_margin="15dp"
            android:id="@+id/dairy"
            style="@style/button_setting_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/dairy" />

        <Button
            android:contentDescription="@string/descr_calculator_settings"
            android:layout_margin="15dp"
            android:id="@+id/calculator_xml"
            style="@style/button_setting_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/calculator" />

        <Button
            android:layout_margin="15dp"
            android:visibility="gone"
            android:id="@+id/moderator"
            style="@style/button_setting_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:text="@string/moderator" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:elevation="5dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>


</RelativeLayout>