<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global__background"
    android:id="@+id/root"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lin"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout2">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="191dp"
            android:layout_height="172dp"
            app:srcCompat="@drawable/logo_white"
            tools:ignore="MissingConstraints,VectorDrawableCompat"
            android:contentDescription="@string/desc_logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_above="@id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            style="@style/styleEditText"
            android:id="@+id/name_xml"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            />

        <EditText
            style="@style/styleEditText"
            android:id="@+id/last_name_xml"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
             />


        <EditText
            android:id="@+id/email_xml"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            style="@style/styleEditText"
            android:hint="@string/SignEmail"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/password_xml"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            style="@style/styleEditText"
            android:hint="@string/SignPassword"
            android:inputType="textPassword" />



        <CheckBox
            android:contentDescription="@string/privacy_policy"
            android:id="@+id/policy"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:theme="@style/colorCheckBox"
            android:layout_height="wrap_content"
            android:text="@string/agree"

            />

        <TextView
            android:contentDescription="@string/privacy_policy"
            android:id="@+id/policy_text"
            android:layout_width="wrap_content"
            style="@style/styleTextView"
            android:layout_height="wrap_content"
            android:textColor="@color/dairy__text_color_privacy"
            android:text="@string/with_pr_pol"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        >

        <Button
            style="@style/styleButton"
            android:contentDescription="@string/Register2"
            android:id="@+id/create_account_xml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/Register"
           />

        <TextView
            style="@style/styleTextView"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/haveAcc" />

        <Button
            style="@style/styleButton"
            android:id="@+id/sign_in_xml"
            android:contentDescription="@string/SignIn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/SignIn"
            />

    </LinearLayout>
</RelativeLayout>