<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    android:background="@drawable/gradient_layout"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lin"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/logo_white" />

    </LinearLayout>

    <LinearLayout

        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

       >

        <EditText
            android:id="@+id/SignEmail"
            android:contentDescription="@string/name2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/SignEmail"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor" />

        <EditText
            android:contentDescription="@string/SignEmail2"
            android:id="@+id/SignPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/SignPassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="@color/hintColor" />



        <TextView
            android:id="@+id/forgotPass"
            android:contentDescription="@string/ForgotPass2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:fontFamily="@font/play"
            android:gravity="center"
            android:text="@string/ForgotPass"
            android:textAlignment="center"
            android:textColor="@color/color_button_grad"
            android:textSize="18sp" />
        
        <Button
            android:id="@+id/SignIn"
            android:contentDescription="@string/SignIn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_login"
            android:fontFamily="@font/play"
            android:text="@string/SignIn"
            android:textColor="@color/white"
            android:textSize="14sp" />



        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/play"
            android:gravity="center_horizontal"
            android:text="@string/DontHaveAcc"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <Button
            android:id="@+id/CreateAcc"
            android:contentDescription="@string/haveAcc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_login"
            android:fontFamily="@font/play"
            android:text="@string/Register"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/play"
            android:gravity="center_horizontal"
            android:text="@string/OrContinue"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <LinearLayout

            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:visibility="gone"
                android:id="@+id/fb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/google"
                android:contentDescription="@string/google"
                android:layout_gravity="center_horizontal"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                app:srcCompat="@drawable/goggle" />

            <com.facebook.login.widget.LoginButton
                android:contentDescription="@string/facebook"
                android:visibility="gone"
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>