<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calculator_auto_edittext">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <Spinner
            android:id="@+id/spinner_xml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/StandartTextView"
            android:padding="5dp"
            android:text="@string/your_name"/>

        <EditText
            style="@style/EditText_change_food_white"
            android:id="@+id/name_xml"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/name2"
            android:padding="5dp" />

        <TextView
            style="@style/StandartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/your_email" />

        <EditText
            style="@style/EditText_change_food_white"
            android:id="@+id/email_xml"
            android:layout_width="match_parent"
            android:layout_height="144px"
            android:layout_gravity="center"
            android:contentDescription="@string/SignEmail2"
            android:inputType="textEmailAddress"
            android:padding="5dp" />

        <TextView
            style="@style/StandartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/text_error"
            android:textSize="16sp" />

        <EditText
            style="@style/EditText_change_food_white"
            android:id="@+id/text_xml"
            android:layout_width="match_parent"
            android:layout_height="300px"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/textMassage"
            android:elegantTextHeight="true"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:textCursorDrawable="@null"
            android:textDirection="locale" />

        <Button
            style="@style/button_setting_style"
            android:layout_marginHorizontal="60dp"
            android:id="@+id/send_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/send2"
            android:padding="5dp"
            android:text="@string/send" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:elevation="5dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

    </LinearLayout>
</RelativeLayout>